12/11/2015
----------
-Updated powerview.ps1
-Added situational_awareness/network/powerview/get_cached_rdpconnection
-Added situational_awareness/network/powerview/set_ad_object
-Added management/downgrade_account

12/9/2015
---------
-Added credentials/mimikatz/cache


11/30/2015
----------
-Combined persistence/debugger/* into persistence/misc/debugger
-Added SysWow64 option to management/spawn to spawn a 32-bit powershell.exe
-Added persistence/userland/backdoor_lnk

11/29/2015
----------
-Built several modules in management/mailraider/* to integrate @xorrior's MailRaider.ps1

11/28/2015
----------
-Merged @xorrior's FoxDump and ChromeDump modules

11/25/2015
----------
-Merged @rvrsh3ll's lateral_movement/invoke_sshcommand

11/24/2015
----------
-Added script autorun functionality

11/23/2015
----------
-Merged @rvrsh3ll's recon/http_login

11/21/2015
----------
-Merge of exploitation/exploit_jboss, bug fix
-Fix in case module returns None
-Merged debian setup.sh fix
-Merged non-interactive cert generation and added to setup.sh
-Fixed nested menu bug that caused buildup of "Agent X not active." 
-Main display menu now shows each time "main" menu is entered

11/8/2015
---------
-All PowerUp modules now dynamically built from a single source file
-PowerUp bug fixes
-Added privesc/powerup/service_exe_restore, pulled logic from other modules
-Added management/spawnas to spawn agents with explicit credentials
-Debug functionality (--debug) now outputs the source of the last tasked script to ./LastTask.ps1
-Write-Verbose and Write-Debug lines now stripped from tasked scripts
-Added situational_awareness/network/powerview/get_forest module

11/4/2015
---------
-Added persistence/misc/add_netuser to add local/domain users

11/2/2015
---------
-Fixed small bug in TASK_CMD_WAIT response parsing

10/30/2015
----------
-Version 1.3.1
-Updated reflectivepick dlls to fix bug in injection and dll payload injection


============
8/20/2015 - RELEASE 1.3
============