@@ -1,3 +1,9 @@
+12/16/2015
+----------
+-Sync of Kevin Robertson's collection/inveigh update
+-Added trollsploit/rick_ascii
+-Bug fixes
+
 12/11/2015
 ----------
 -Updated powerview.ps1
